5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1592_2043.log
== TEST (2019-03-29 17:49:13) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = var1*p1+var2*p2+var3*p3+var4*p4
print(round(media,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:50:02) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = var1*p1+var2*p2+var3*p3+var4*p4
print(round(media,1))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:50:40) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = var1*p1+var2*p2+var3*p3+var4*p4
print(round(media,3))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:51:47) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
total = var1*p1+var2*p2+var3*p3+var4*p4
print(round(total,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:51:59) 
-- CODE:
from math import*
var1 = float(input(" nota1 "))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
total = var1*p1+var2*p2+var3*p3+var4*p4
print(round(total,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:52:13) 
-- CODE:
from math import*
var1 = float(input("nota 1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
total = var1*p1+var2*p2+var3*p3+var4*p4
print(round(total,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:52:22) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
total = var1*p1+var2*p2+var3*p3+var4*p4
print(round(total,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:52:43) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
total = var1*p1+var2*p2+var3*p3+var4*p4
print(round(total,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:53:27) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
total = var1*p1+var2*p2+var3*p3+var4*p4
print(round(total,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:54:30) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,5))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:54:51) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,5))
-- EXECUTION TIME:
0.1446
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:55:07) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4/10
print(round(x,5))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:55:48) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,0))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:11) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:56:49) 
-- CODE:
from math import*
var1 = int(input("nota1"))
var2 = int(input("nota2"))
var3 = int(input("nota3"))
var4 = int(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:57:21) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:00:27) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,3))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:00:50) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
x = var1*p1+var2*p2+var3*p3+var4*p4
print(round(x,3))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:02:00) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = var1*p1+var2*p2+var3*p3+var4*p4
print(round(d,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:02:08) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = var1*p1+var2*p2+var3*p3+var4*p4
print(round(d,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:04:42) 
-- CODE:
from math import*
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:05:26) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:05:57) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,3))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:06:16) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,3))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:07:32) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))
-- EXECUTION TIME:
0.170259
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:11:12) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(d)
print(round(d,2))
-- OUTPUT:
82.0
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:11:34) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(d)
print(round(d,1))
-- OUTPUT:
82.0
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:12:47) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
f=67
print(round(f,1))
-- OUTPUT:
67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:15) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
f=67
print(round(f,1))
-- OUTPUT:
67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:30) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(f,3))
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:49) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(f,3))
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:57) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,3))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:14:44) 
-- CODE:

var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:24:50) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:25:50) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))

-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:03) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))

-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:20) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)
print(round(d,2))

-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:19) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)/10
print(round(d,3))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:33:23) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
d = (var1*p1+var2*p2+var3*p3+var4*p4)/10
print(round(d,3))

-- EXECUTION TIME:
0.148616
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:55) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
d = (var1*1+var2*2+var3*3+var4*4)/10
print(round(d,3))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:34:12) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
d = (var1*1+var2*2+var3*3+var4*4)/10
print(round(d,3))

-- EXECUTION TIME:
0.249168
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:34:18) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
d = (var1*1+var2*2+var3*3+var4*4)/10
print(round(d,3))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:34:35) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
d = (var1*1+var2*2+var3*3+var4*4)/10
print(round(d,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:34:38) 
-- CODE:
var1 = float(input("nota1"))
var2 = float(input("nota2"))
var3 = float(input("nota3"))
var4 = float(input("nota4"))
d = (var1*1+var2*2+var3*3+var4*4)/10
print(round(d,2))

-- EXECUTION TIME:
0.200294
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
